--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ html,body {
     scroll-behavior: smooth;
 }
 
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 header {
     position: fixed;
     width: 100vw;
@@ -37,6 +41,70 @@ header nav a {
 header nav a:hover {
     color: yellow;
 }
+
+.grupo {
+    height: 100vh;
+    border: 1px solid black;
+}
+
+
+/* MELIODAS - TELA 1 */
+
+
+
+#meliodas {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: yellow;
+}
+
+#container {
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+    background-color: white;
+    padding: 50px;
+    border-radius: 30px;
+}
+
+#imgMeliodas {
+    box-shadow: -5px 10px 100px rgb(192, 182, 4);
+    margin-right: 30px;
+}
+
+#textoMeliodas {
+    font-size: 30px;
+}
+
+#subMeliodas {
+    margin-top: 15px;
+    font-size: 20px;
+}
+
+#caixaTitulos {
+    background-color: white;
+    height: 250px;
+    border-radius: 30px;
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#caixaTitulos h1 {
+    font-size: 45px;
+    transition: 1.5s;
+}
+
+#caixaTitulos:hover{
+    background-color: black;
+    color: red;
+}
+
+
+
 
 
 
