--- a/style.css
+++ b/style.css
@@ -50,8 +50,6 @@ header nav a:hover {
 
 /* MELIODAS - TELA 1 */
 
-
-
 #meliodas {
     display: flex;
     align-items: center;
@@ -59,7 +57,7 @@ header nav a:hover {
     background-color: yellow;
 }
 
-#container {
+.container {
     display: flex;
     flex-direction: column;
     width: 600px;
@@ -69,7 +67,7 @@ header nav a:hover {
 }
 
 #imgMeliodas {
-    box-shadow: -5px 10px 100px rgb(192, 182, 4);
+    filter: drop-shadow(-5px 10px 100px rgb(178, 4, 247));
     margin-right: 30px;
 }
 
@@ -102,6 +100,58 @@ header nav a:hover {
     background-color: black;
     color: red;
 }
+
+/* ESCANOR - TELA 2 */
+
+#escanor {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(255, 157, 0);
+}
+
+#textoEscanor {
+    font-size: 30px;
+}
+
+#subEscanor {
+    font-size: 20px;
+    margin-top: 15px;
+}
+
+#imgEscanor {
+    filter: drop-shadow(-5px 10px 100px rgb(237, 230, 1));
+    margin-left: 500px;
+}
+
+#imgEscanor img {
+    height: 750px;
+}
+
+#caixaTitulosEscanor {
+    background-color: white;
+    height: 250px;
+    border-radius: 30px;
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#caixaTitulosEscanor h1 {
+    font-size: 45px;
+}
+
+#caixaTitulosEscanor:hover {
+    background-color: black;
+    color: gold;
+    transition: 1.5s;
+}
+
+
+
+
 
 
 
